# companion_pager

./: .env.example  .gitignore  CLAUDE.md  JSON snippets for review.json  PLAN.md  PRD.md  README.md  coachella_mv_config.toml  companion_navUpdate.py  companion_pager.py  companion_pager_v2.py  config.example.toml  dictTester.py  hello.py  mv_config.example.toml  pyproject.toml  python_nav_updated.companionconfig  python_updated.companionconfig  spyder_query_presets_toGglSht.py
example config files for ref/: Coachella_NUC-Spy-Green_full-config_20230412-1705.companionconfig  Coachella_config_30Mar.companionconfig  OLD_ready_for_python_update.companionconfig  SpyderStartPage.companionconfig  blank_page.companionconfig  bottons_only.companionconfig  buttons_and_connections.companionconfig  current_config_19Mar_m5mpb.local_2026-03-19-2031_custom_config.companionconfig  ewc_20th_EOD.companionconfig  full_default.companionconfig  full_from_JB.companionconfig  full_reset.companionconfig  manual sort - Coachella_NUC-Spy-Green_full-config_20230412-1705.companionconfig  newPage_1button2023.companionconfig  nuc-green_2026_draft.companionconfig  reset_template_ready_for_python.companionconfig  spyder_button_1.companionconfig  temp_buttonPage.companionconfig  template_ready_for_python.companionconfig  vars_m5mpb.local_2026-03-19-2229_custom_config.companionconfig  x_SpyderStartPage.companionconfig
python/: companion_pager_v2.py  spyder_query_presets_toGglSht.py
src/: companion_nav_update.py  companion_pager_v3.py  spyder_query_presets_toGglSht.py
tests/: conftest.py  (+5 more)
(+16 files in other folders)
