[project]
name = "companion-pager"
version = "0.2.0"
description = "Sync Aquilon preset names/indexes into a Bitfocus Companion config"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
companion-sync = "companion_sync.main:main"
companion-verify = "companion_sync.verify:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
